--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.7",
     "bootstrap": "^5.2.0",
     "bootstrap.native": "^4.2.0",
     "css-loader": "^6.7.1",
     "exports-loader": "^4.0.0",
+    "hover.css": "^2.3.2",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
